Fix z-index error

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,7 +37,7 @@ body{
 	cursor: pointer;
 	max-width: 100%;
 	padding-left: 30px;
-	z-index: 120;
+	z-index: 1200;
 	box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     -webkit-transition: height 0.5s ease-in-out, padding 0.3s ease-in-out;
@@ -67,7 +67,7 @@ body{
 	right: 0;
 	width: 100%;
 	height: 60px;
-	z-index: 100;
+	z-index: 1100;
 	box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
